# Skyline

./: .gitignore  Cargo.toml  README.md  debug.txt  session.json
src/: lib.rs  main.rs
src/client/: api.rs  auth.rs  mod.rs  update.rs
src/ui/: app.rs  layout.rs  mod.rs  views.rs
src/ui/components/: author_feed.rs  author_profile.rs  command_input.rs  feed.rs  images.rs  login.rs  mod.rs  notifications.rs  post.rs  post_composer.rs  post_list.rs  post_old.rs  thread.rs
src/ui/components/post/: avatar.rs  content.rs  header.rs  images.rs  mod.rs  quoted_post.rs  stats.rs  types.rs
