[package]
name = "skyline"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
anyhow = "1.0.93"
atrium-api = "0.24.8"
atrium-xrpc-client = { version = "0.5.10", features = ["reqwest"] }
base64 = "0.22.1"
bsky-sdk = "0.1.13"
chrono = "0.4.38"
cid = "0.11.1"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.2.0"
image = "0.25.5"
ipld-core = "0.4.1"
log = "0.4.22"
lru = "0.12.5"
mockall = "0.13.1"
ratatui = "0.29.0"
ratatui-image = "3.0.0"
reqwest = "0.12.9"
secrecy = "0.10.3"
serde = "1.0.215"
serde_json = "1.0.133"
simplelog = "0.12.2"
textwrap = "0.16.1"
thiserror = "2.0.3"
tokio = { version = "1.28.0", features = ["full"] }
tokio-macros = "2.1.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.4"
viuer = "0.9.1"

